# circuitpython-esp32at

./: LICENSE  README.md  impl_notes.md  pyproject.toml
doc/: AT-commands-used.md  UART-inbound-messages.md  at_firmware_compile.md  at_firmware_compile_esp01s.md  dev_guide.md  hardware_firmware.md  impl_notes.md  performance.md
esp32at/: transport.py
examples/: README.md  ap_webserver.py  factory_reset.py  helpers.py  http_server.py  iperf3_client.py  ping.py  pins.py  query_departures.py  query_openmeteo.py  query_timeapi.py  scan_networks.py  sec_template.py  stream.py  test_sta.py  udp_client.py  udp_logger.py  udp_receiver.py
ipaddress/: __init__.py
mdns/: __init__.py  remoteservice.py  server.py
socketpool/: implementation.py  socket.py  socketpool.py
src/esp32at/: transport.py
src/mdns/: server.py
src/socketpool/: __init__.py  implementation.py  socket.py  socketpool.py
src/ssl/: sslsocket.py
src/wifi/: __init__.py  authmode.py  network.py  radio.py
ssl/: __init__.py  sslcontext.py  sslsocket.py
wifi/: __init__.py  authmode.py  monitor.py  network.py  packet.py  radio.py  scanned_networks.py  transport.py
