# SPDX-FileCopyrightText: 2024 Bernhard Bablok
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-esp32at"
description = "CircuitPython core-API compatible modules for non-native wifi builds."
version = "0.0.0+auto.0"
readme = "README.md"
authors = [
    {name = "Bernhard Bablok", email = "bablokb@gmx.de"}
]
urls = {Homepage = "https://github.com/bablokb/circuitpython-esp32at"}
keywords = [
    "wifi",
    "ESP32C3",
    "ESP32C6",
    "hardware",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
